# kmc_oxidos

./: .env.example  .gitignore  .pylintrc  CONTRIBUTING.md  OPEN_SYSTEM_NOTES.md  QUICKSTART.md  README.md  main.py  pyproject.toml
docs/: FRAMEWORK_SUMMARY.md  abstract.md  avances.md  kmc_core.md  swarmthinkers_implementation_plan.md
experiments/: README.md  README_GPU.md  debug_inference.py  gpu_benchmark.py  inference_agent_based.py  predict_massive_agent.py  predict_massive_gpu.py  predict_with_agent.py  profile_bottleneck.py  run_simulations.py  run_trained_model.py  test_agent_env.py  test_callbacks.py  test_coordinator.py  test_integration.py  test_particle_agents.py  test_reweighting.py  test_shared_policy.py  test_train_agent_based.py  test_training_pipeline.py  train_agent_based.py  train_gpu.py  train_gpu_swarm.py  train_policy.py  train_scalable_agent.py  validate_gym_env.py  validate_kmc_basic.py  validate_swarmthinkers.py
experiments/configs/: README.md  agent_based_test.yaml  runpod_training.py  stage1_small.yaml  stage2_medium.yaml  stage3_large.yaml  test_tiny.yaml
src/: __init__.py
src/analysis/: __init__.py  fractal.py  roughness.py  visualization.py
src/data/: __init__.py  tio2_parameters.py
src/kmc/: __init__.py  efficient_updates.py  events.py  lattice.py  rates.py  simulator.py  tensor_lattice.py  tensor_rates.py
src/rl/: __init__.py  action_selection.py  action_space.py  agent_env.py  critic.py  energy_calculator.py  environment.py  observations.py  particle_agent.py  policy.py  rate_calculator.py  reweighting.py  shared_policy.py  swarm_coordinator.py  swarm_engine.py  swarm_policy.py  tensor_env.py  vec_env.py
src/settings/: __init__.py  config.py
src/training/: README.md  __init__.py  agent_based_env.py  callbacks.py  gym_environment.py  reward_calculator.py
